--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*,
+*::after,
+*::before {
+	box-sizing: border-box;
+}
+
+body,
+html {
+	font-family: 'Poppins', sans-serif;
+}
